--- a/sass/_mystyle.scss
+++ b/sass/_mystyle.scss
@@ -1,10 +1,10 @@
 /*Color:Green 1aa79c Gray 4d4d4d*/
 //* Variables */
 $text-color:        #4d4d4d !default;
-$brand-color:       #1aa79c !default;
+$brand-color:       $brand-primary !default;
 
 /*Font*/
-@import 'https://fonts.googleapis.com/css?family=Roboto:300,700';
+@import 'https://fonts.googleapis.com/css?family=Roboto:300,400,700';
 
 body {
     font-family: 'Roboto', sans-serif;
@@ -24,7 +24,7 @@ body {
   .navbar-logo{
     position: relative;
     display: block;
-    padding-left: 85px;
+    padding-left: 90px;
     text-decoration: inherit;
     color: $brand-color;
     margin: 20px 65px 20px 0;
@@ -49,7 +49,7 @@ body {
     margin-right: 20px;
     margin-top: 40px;
     .icon-bar {
-        background-color: #1aa79c;
+        background-color: $brand-primary;
     }
   }
 
@@ -66,7 +66,7 @@ body {
       }
 
       &.active > a{
-        color: #1aa79c;
+        color: $brand-primary;
         text-decoration: underline;
       }
     }
@@ -137,6 +137,7 @@ body > .container{
     }
     p{
       line-height: 60px;
+      margin: 0;
     }
     .footer-social {
       position: absolute;
@@ -153,92 +154,81 @@ body > .container{
 
 
 /*Project Page*/
+.row-summary{
+   background-color: $brand-primary;
+   color: white;
+   padding:0 10px 15px 10px;
+   .summary-title{
+      & > * {
+        display: inline-block;
+        vertical-align: bottom;
+      }
+      h1 {
+        margin-right: 20px;
+      }
+      h3 {
+        color: $text-color;
+        font-weight:300;
+      }
+   }
+   .summary-item{
+     font-size: $font-size-base;
+     .item-title{
+        display: inline-block;
+        color: $text-color;
+        min-width: 100px;
+     }
+     .item-content{
+       display: inline-block;
+     }
+   }
+
+}
+
+.detail-wrap{
+  h3{
+    color: $brand-primary;
+    margin-top: 28px;
+  }
+  h5{
+    font-weight: $bold-font-weight;
+  }
+  h3 + h5 {
+    margin-top: 15px;
+  }
+
+  p.small{
+    margin-top: 25px;
+  }
+
+  .attachment-text {
+      color: $brand-primary;
+      font-weight: $semi-bold-font-weight;
+      font-style: italic;
+  }
+}
 
 
-.green {
-    color: rgb(26, 167, 157);
-}
 
-h4 {
-    color: #1aa79c;
-    font-size: 20px;
-}
-#title-row {
-    background-color: #1aa79c;
-    min-height: 230px;
-}
-.title-text {
-    color: white;
-    float: left;
-    margin-right: 20px;
-}
-.subtitle-text {
-    float: left;
-    font-size: 24px;
-    margin-top: 29px;
-}
-.item-title {
-    float: left;
-    width: 150px;
-}
-.item-title p {
-    font-family: MyFont;
-    font-size: 16px;
-    margin-bottom: 8px;
-}
-.item-content {
-    float: left;
-}
-.item-content p {
-    color: white;
-    font-family: MyFont;
-    font-size: 16px;
-    margin-bottom: 8px;
-}
-#content-row {
-    margin-top: 40px;
-}
-#title-img {
-    height: 500px;
-    float: right;
-}
-.img-text-section {
-    width: 100%;
-    clear: both;
-}
-.img-text-section p {
-    width: 80%;
-    text-align: center;
-    margin-bottom: 20px;
-    float: right;
-}
-.img-text-big-section p {
-    width: 80%;
-    margin: 0 10%;
-    text-align: center;
-}
-.project-img {
-    clear: both;
-    display: block;
-    float: right;
-    width: 80%;
-}
-.full-width-img {
-    width: 100%;
-}
-.project-big-img {
-    width: 80%;
-    margin: 0 10%;
-}
+// Right column
+
 #img-section {
     border-left: 1px solid #ccc;
+    padding-top: 35px;
 }
-.attachment-text {
-    font-size: 16px;
-    color: #1aa79c;
-    font-weight: bold;
-    font-style: italic;
+
+.img-text-section{
+  text-align: center;
+  margin-bottom: 30px;
+  img{
+    width:100%;
+  }
+  p{
+    font-size: $font-size-small;
+    margin-top: 5px;
+  }
 }
+
 
 /*About Me*/
 
