--- a/sass/_mystyle.scss
+++ b/sass/_mystyle.scss
@@ -148,9 +148,8 @@ body > .container{
       margin-left: 10px;
       height: 25px;
     }
+
 }
-
-
 
 
 /*Project Page*/
@@ -262,13 +261,28 @@ body > .container{
 
 
 /*About Me*/
-
+#section_about_me{
+  h1 {
+    font-size:50px;
+    margin-left:2%;
+  }
+  h4 {
+    color:#4d4d4d;
+    width:92%;
+    margin-left:8%;
+    font-weight:300;
+    margin-bottom:50px;
+    font-size: 16px;
+    line-height: 1.4;
+  }
+}
 .about-img {
     width: 92%;
     margin-top: 100px;
     float: right;
     margin-right: -10px;
 }
+
 
 /*Resume*/
 
